# pico-w-connection-manager-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main_lwipopts.h  pico_lfs_cli.cpp
fs/: index.html  ssi.shtml
fsdata/: makefsdata
fsdata/fs/: 404.html  429.html  about.html  aindex.shtml  index.shtml  jindex.html
fsdata/fs/css/: style.css
